fix: 🐛 two factor auth spacing

--- a/src/components/profile/twoFactorAuth.styles.scss
+++ b/src/components/profile/twoFactorAuth.styles.scss
@@ -89,7 +89,7 @@
 		display: flex;
 
 		.text {
-			margin: auto;
+			margin: auto 0;
 		}
 
 		img {
